Use VirtualThreads in SystemMonitor
Also, get rid of deprecated Runtime.getRuntime().exec(String)